# chip8-emulator

./: .gitignore  CMakeLists.txt  Chip8.cpp  Chip8.h  Makefile  README.md  main.cpp
roms/: CREDITS.txt
src/: Chip8.cpp  main.cpp
